# prometheus-qbittorrent-exporter

./: Dockerfile  pyproject.toml  requirements.txt
qbittorrent_exporter/: exporter.py
