[tool.poetry]
name = "qbittorrent-exporter"
version = "1.5.2"
description = "Prometheus exporter for qbittorrent"
authors = [
    "Esteban Sanchez <esteban.sanchez@gmail.com>",
    "Lewdzifer <lewdzifer@pidx.io>"
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.scripts]
qbittorrent-exporter = "qbittorrent_exporter.exporter:main"

[tool.poetry.dependencies]
python = ">=3.11"
prometheus-client = "^0.21.0"
python-json-logger = "^2.0.7"
qbittorrent-api = "^2024.10.68"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
black = "^24.10.0"
coverage = "^7.6.4"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
